--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     <section class="main-content">
       {{ content }}
       <a href="https://github.com/dl0dx/DD2024/wiki"><img src="DD2024EM.jpg" title="DD2024EM" alt="DD2024EM"></a>
+      <div>
+      <a href="https://github.com/dl0dx/DD2024/wiki"><img src="photo_2024-05-24_17-19-15.jpg" title="DD2024EM" alt="DD2024EM"></a>
+      </div>
       <footer class="site-footer">
       </footer>
     </section>
