--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,17 +11,18 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h1 class="project-name">Düsseldorf 2024 Europameisterschaft</h1>      
+      <h1 class="project-name"><b>D</b>üssel<b>d</b>orf 2024 <b>E</b>uropa<b>m</b>eisterschaft</h1>      
     </section>
     <section>
     <section class="main-content">
       <a href="https://www.qrz.com/db/DD2024EM">
         <h1>DD2024EM on QRZ.com</h1>
       </a>
-      <div><img src="DD2024EM.jpg" title="DD2024EM" alt="DD2024EM"></div>
       <section>
         <iframe height="500px" width="100%" src="https://kalender.digital/b0eb8b69fdb5efdba3e9?iframe=true"></iframe>
       </section>
+      <div><img src="DD2024EM.jpg" title="DD2024EM" alt="DD2024EM"></div>
+
       <div>
       <img src="photo_2024-05-24_17-19-15.jpg" title="DD2024EM" alt="DD2024EM">
       </div>
