--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,14 @@
     <section>
     <section class="main-content">
       <a href="https://www.qrz.com/db/DD2024EM">
-        <h1>DD2024EM on QRZ.com</h1>
+        <h1>Visit the DD2024EM page on QRZ.com</h1>
       </a>
       <section>
+        <h1>Activity Calendar</h1>
         <iframe height="500px" width="100%" src="https://kalender.digital/b0eb8b69fdb5efdba3e9?iframe=true"></iframe>
       </section>
+      
       <div><img src="DD2024EM.jpg" title="DD2024EM" alt="DD2024EM"></div>
-
       <div>
       <img src="photo_2024-05-24_17-19-15.jpg" title="DD2024EM" alt="DD2024EM">
       </div>
