--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,16 +19,31 @@
         <h1>Visit the DD2024EM page on QRZ.com</h1>
       </a>
       <section>
+        <h1>About the callsign</h1>
+        
+        <p><b>(EN)</b>The European Men's Football Championship 2024 will be the 17th edition of the competition to be held in Germany from 14 June to 14 July 2024.
+Düsseldorf is one of the venues for the European Championship. We as the local radio amateurs association Düsseldorf would like to draw attention to our beautiful hometown on the river Rhine with numerous radio connections. To this end, OMs from our club will put the callsign DD2024EM on the air on various frequencies and modes. When and where can be found in our activity calendar. 
+We are currently working on a logbook check and a live logbook. When it is ready, you will find a link to it here on this page.</p>
+        <p><b>(DE)</b>Die Fußball-Europameisterschaft 2024 der Männer wird als 17. Austragung des Wettbewerbs vom 14. Juni bis zum 14. Juli 2024 in Deutschland stattfinden.
+Düsseldorf ist ein Austragungsort der Europameisterschaft. Wir als der Funkamateure Ortsverband Düsseldorf möchten durch zahlreiche Funkverbindungen auf unsere schöne Heimatstadt am fluss Rhein aufmerksam machen. Dazu werden OMs aus unserem Verein das Rufzeichen DD2024EM auf unterschiedlichen Frequenzen und Modes in die Luft bringen. Wann und Wo findest du in unserem Aktivitäts Kalender. 
+Derzeit ist ein Logbuch-Check bzw. ein Live-Logbuch in arbeit. Wenn es fertig ist, wirst du hier auf dieser Seite einen  Link dazu finden. 
+        </p>
+      </section>
+      <section>
         <h1>Activity Calendar</h1>
         <iframe height="500px" width="100%" src="https://kalender.digital/b0eb8b69fdb5efdba3e9?iframe=true"></iframe>
       </section>
-      
+
+      <section>
+        <h1>Our QSL-Card</h1>
       <div><img src="DD2024EM.jpg" title="DD2024EM" alt="DD2024EM"></div>
+      <h1>Some impressions</h1>
       <div>
       <img src="photo_2024-05-24_17-19-15.jpg" title="DD2024EM" alt="DD2024EM">
       </div>
       <img src="fortuna-stadion.jpg" title="Fortuna Areana" alt="Fortuna Areana">
       </div>
+      </section>
       <footer class="site-footer">
       </footer>
     </section>
