--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,11 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h1 class="project-name"><b>D</b>üssel<b>d</b>orf 2024 <b>E</b>uropa<b>m</b>eisterschaft</h1>      
+      <h1 class="project-name"><b style="color:red">D</b>üssel<b style="color:red">d</b>orf 2024 <b style="color:red">E</b>uropa<b style="color:red">m</b>eisterschaft</h1>      
     </section>
     <section>
     <section class="main-content">
+      <b>Special Callsign for the European Football Championship 2024</b>
       <a href="https://www.qrz.com/db/DD2024EM">
         <h1>Visit the DD2024EM page on QRZ.com</h1>
       </a>
