--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <section class="page-header">
+    <section class="page-header">.
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h1 class="project-name"><b style="color:red">D</b>üssel<b style="color:red">d</b>orf 2024 <b style="color:red">E</b>uropa<b style="color:red">m</b>eisterschaft</h1>      
+      <h1 class="project-name"><span style="color:red">D</span>üssel<span style="color:red">d</span>orf 2024 <span style="color:red">E</span>uropa<span style="color:red">m</span>eisterschaft</h1>      
     </section>
     <section>
     <section class="main-content">
