--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <body>
     <section class="page-header">.
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h1 class="project-name"><span style="color:red">D</span>üssel<span style="color:red">d</span>orf 2024 <span style="color:red">E</span>uropa<span style="color:red">m</span>eisterschaft</h1>      
+      <h1 class="project-name"><span style="color:red">D</span>üssel<span style="color:red">d</span>orf <span style="color:red">2024</span> &nbsp;<span style="color:red">E</span>uropa<span style="color:red">m</span>eisterschaft</h1>      
     </section>
     <section>
     <section class="main-content">
