--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,10 @@ Derzeit ist ein Logbuch-Check bzw. ein Live-Logbuch in arbeit. Wenn es fertig is
         <h1>Activity Calendar</h1>
         <iframe height="500px" width="100%" src="https://kalender.digital/b0eb8b69fdb5efdba3e9?iframe=true"></iframe>
       </section>
+      <section>
+        <h1>Log-Check & Live-Logbook</h1>
+        coming soom.....
+      </section>
 
       <section>
         <h1>Our QSL-Card</h1>
