--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@ Derzeit ist ein Logbuch-Check bzw. ein Live-Logbuch in arbeit. Wenn es fertig is
       <section>
         <h1>Activity Calendar</h1>
         <iframe height="500px" width="100%" src="https://kalender.digital/b0eb8b69fdb5efdba3e9?iframe=true"></iframe>
+        <h1>Activity</h1>
+        <p><a href="https://foc.dj1yfk.de/activity/DL5RFK"><img src="https://foc.dj1yfk.de/activity/image/DD2024EM" /></a></p>
       </section>
       <section>
         <h1>Log-Check & Live-Logbook</h1>
