--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,10 +36,22 @@ Derzeit ist ein Logbuch-Check bzw. ein Live-Logbuch in arbeit. Wenn es fertig is
         <h1>Activity</h1>
         <p><a href="https://foc.dj1yfk.de/activity/DD2024EM"><img src="https://foc.dj1yfk.de/activity/image/DD2024EM" /></a></p>
       </section>
-      <section>
+      
         <h1>Log-Check & Live-Logbook</h1>
         coming soom.....
-      </section>
+      
+      <h1>List of operators</h1>
+<ul>
+    <li><a href="https://www.qrz.com/db/DK7TX" target="_blank">DK7TX</a>, Oliver</li>
+    <li><a href="https://www.qrz.com/db/DL5JS" target="_blank">DL5JX</a>, Michael</li>
+    <li><a href="https://www.qrz.com/db/DL1MC" target="_blank">DL1MC</a>, Michael</li>
+    <li><a href="https://www.qrz.com/db/DL5RFK" target="_blank">DL5RFK</a>, Klaus</li>
+    <li><a href="https://www.qrz.com/db/DM5MD" target="_blank">DM5MD</a>, Hendrik</li>
+    <li><a href="https://www.qrz.com/db/DM1MF" target="_blank">DM1MF</a>, Mark</li>
+</ul>
+<p><span style="font-size:12px"><em>(click for more details)</em></span></p>
+
+<p>&nbsp;</p>
 
       <section>
         <h1>Our QSL-Card</h1>
