--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,28 +33,26 @@ Derzeit ist ein Logbuch-Check bzw. ein Live-Logbuch in arbeit. Wenn es fertig is
       <section>
         <h1>Activity Calendar</h1>
         <iframe height="500px" width="100%" src="https://kalender.digital/b0eb8b69fdb5efdba3e9?iframe=true"></iframe>
+        
         <h1>Activity</h1>
+        <p>Please check also the <a href="https://pskreporter.info/pskmap.html?preset&callsign=DD2024EM&txrx=tx&timerange=900&hideunrec=1&blankifnone=1&hidepink=1&hidelight=1&mapCenter=46.99974550244528,0.9378354522023349,3.0894335698171744">PSK-Reporter Map</a> for our activities in digital modes.</p>
         <p><a href="https://foc.dj1yfk.de/activity/DD2024EM"><img src="https://foc.dj1yfk.de/activity/image/DD2024EM" /></a></p>
-      </section>
       
         <h1>Log-Check & Live-Logbook</h1>
         coming soom.....
       
       <h1>List of operators</h1>
-<ul>
+    <ul>
     <li><a href="https://www.qrz.com/db/DK7TX" target="_blank">DK7TX</a>, Oliver</li>
     <li><a href="https://www.qrz.com/db/DL5JS" target="_blank">DL5JX</a>, Michael</li>
     <li><a href="https://www.qrz.com/db/DL1MC" target="_blank">DL1MC</a>, Michael</li>
     <li><a href="https://www.qrz.com/db/DL5RFK" target="_blank">DL5RFK</a>, Klaus</li>
     <li><a href="https://www.qrz.com/db/DM5MD" target="_blank">DM5MD</a>, Hendrik</li>
     <li><a href="https://www.qrz.com/db/DM1MF" target="_blank">DM1MF</a>, Mark</li>
-</ul>
-<p><span style="font-size:12px"><em>(click for more details)</em></span></p>
+    </ul>
+    <p><span style="font-size:12px"><em>(click for more details)</em></span></p>
 
-<p>&nbsp;</p>
-
-      <section>
-        <h1>Our QSL-Card</h1>
+      <h1>Our QSL-Card</h1>
       <div><img src="DD2024EM.jpg" title="DD2024EM" alt="DD2024EM"></div>
       <h1>Some impressions</h1>
       <div>
