fix: Rufzeichen von Michael

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@ Derzeit ist ein Logbuch-Check bzw. ein Live-Logbuch in arbeit. Wenn es fertig is
       <h1>List of operators</h1>
     <ul>
     <li><a href="https://www.qrz.com/db/DK7TX" target="_blank">DK7TX</a>, Oliver</li>
-    <li><a href="https://www.qrz.com/db/DL5JS" target="_blank">DL5JX</a>, Michael</li>
+    <li><a href="https://www.qrz.com/db/DL5JS" target="_blank">DL5JS</a>, Michael</li>
     <li><a href="https://www.qrz.com/db/DL1MC" target="_blank">DL1MC</a>, Michael</li>
     <li><a href="https://www.qrz.com/db/DL5RFK" target="_blank">DL5RFK</a>, Klaus</li>
     <li><a href="https://www.qrz.com/db/DM5MD" target="_blank">DM5MD</a>, Hendrik</li>
